--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@
  */
 :root {
   --bs-blue: #0d6efd;
-  --bs-indigo: #6610f2;
+  --bs-indigo: #5225cc;
   --bs-purple: #6f42c1;
   --bs-pink: #d63384;
   --bs-red: #dc3545;
@@ -24,7 +24,7 @@
   --bs-white: #fff;
   --bs-gray: #6c757d;
   --bs-gray-dark: #343a40;
-  --bs-primary: #bd5d38;
+  --bs-primary: #000000;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -56,7 +56,7 @@ body {
   font-weight: 400;
   line-height: 1.5;
   color: #212529;
-  background-color: #fff;
+  background-color: rgb(0, 0, 0);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
@@ -92,6 +92,7 @@ h1, .h1 {
 }
 
 h2, .h2 {
+  color: #5225cc;
   font-size: calc(1.475rem + 2.7vw);
 }
 @media (min-width: 1200px) {
@@ -119,7 +120,7 @@ h4, .h4 {
 }
 
 h5, .h5 {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
 }
 
 h6, .h6 {
@@ -127,6 +128,7 @@ h6, .h6 {
 }
 
 p {
+  /* font-size: 1.2rem; */
   margin-top: 0;
   margin-bottom: 1rem;
 }
@@ -3852,7 +3854,7 @@ textarea.form-control-lg {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #bd5d38;
+  color: #5225cc;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -3862,7 +3864,7 @@ textarea.form-control-lg {
   }
 }
 .nav-link:hover, .nav-link:focus {
-  color: #974a2d;
+  color: #5225cc;
 }
 .nav-link.disabled {
   color: #6c757d;
@@ -4227,7 +4229,7 @@ textarea.form-control-lg {
   color: #fff;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.55);
+  color: #5225cc;
 }
 .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
   color: rgba(255, 255, 255, 0.75);
@@ -4237,7 +4239,7 @@ textarea.form-control-lg {
 }
 .navbar-dark .navbar-nav .show > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #fff;
+  color: var(--bs-secondary);
 }
 .navbar-dark .navbar-toggler {
   color: rgba(255, 255, 255, 0.55);
@@ -4770,7 +4772,7 @@ textarea.form-control-lg {
   height: 1rem;
   overflow: hidden;
   font-size: 0.75rem;
-  background-color: #e9ecef;
+  background-color: #6c757d;
   border-radius: 0.25rem;
 }
 
@@ -4782,7 +4784,7 @@ textarea.form-control-lg {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #bd5d38;
+  background-color: #5225cc;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -7336,7 +7338,7 @@ textarea.form-control-lg {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #bd5d38 !important;
+  color: #5225cc !important;
 }
 
 .text-secondary {
@@ -7392,7 +7394,7 @@ textarea.form-control-lg {
 }
 
 .bg-primary {
-  background-color: #bd5d38 !important;
+  background-color: var(--bs-primary) !important;
 }
 
 .bg-secondary {
@@ -10861,6 +10863,7 @@ h6,
   text-transform: uppercase;
 }
 
+
 h1, .h1 {
   line-height: 1;
 }
@@ -10877,14 +10880,19 @@ p.lead {
   font-size: 1.5rem;
 }
 
+.subheading a {
+  color: var(--bs-secondary);
+}
+
 #sideNav {
   padding-left: 1rem;
   padding-right: 1rem;
 }
 #sideNav .navbar-nav .nav-item .nav-link {
-  font-weight: 800;
+  font-size: 1.5rem;
+  font-weight: 200;
   letter-spacing: 0.05rem;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 #sideNav .navbar-toggler:focus {
   outline-color: #d48a6e;
@@ -10937,18 +10945,25 @@ p.lead {
   justify-content: center;
   height: 3.5rem;
   width: 3.5rem;
-  background-color: #495057;
+  background-color: #5225cc;
   color: #fff;
   border-radius: 100%;
   font-size: 1.5rem;
   margin-right: 1.5rem;
 }
+
+
 .social-icons .social-icon:last-child {
   margin-right: 0;
 }
+
 .social-icons .social-icon:hover {
-  background-color: #bd5d38;
+  background-color: #4716ce;
 }
+
+/* .social-icons .social-icon:hover {
+  background-color: #4716ce;
+} */
 
 .dev-icons {
   font-size: 3rem;
@@ -11335,11 +11350,12 @@ section{
 }
 
 #s4 .image .overlay {
+  /* color: #5225cc; */
   position: absolute;
   bottom: 100%;
   left: 0;
   right: 0;
-  background: #bd5d38;
+  background: #000000;
   overflow: hidden;
   width: 100%;
   height:0;
@@ -11355,6 +11371,7 @@ section{
   color: white;
   text-decoration: none;
   font-size: 20px;
+  /* font-weight: 200; */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -11364,6 +11381,11 @@ section{
   text-align: center;
   width: 90%;
 }
+
+/* #s4 .image .text:hover {
+  color: #5225cc;
+  transform: .3 ease;
+} */
 
 #s4 .image .bottom{
   bottom: 0;
